src/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Merriweather&display=swap');

body {
  font-family: "Fira Sans", sans-serif;
  margin: auto;
  width: calc(min(100%, 768px));
}

body, select {
  color: white;
  background-color: #111;
}

h1 {
  font-size: 62px;
  text-align: center;
  padding: 24px;
}

main {
  text-align: center;
}

section, p {
  margin: 1em 0em;
}

audio {
  width: 100%;
}

button {
  font-size: 48px;
}
button:hover {
  cursor: pointer;
}

#sheet > span {
  background-color: #531d5b;
  padding: 4px;
  margin: 2px;
  border-radius: 8px;
}

